Bug #61970 - Allow a child class to restrict access to ctor